fixed broken img symbol, camera takes care about browser tab visibility

--- a/octoprint_mrbeam/static/css/svgtogcode.css
+++ b/octoprint_mrbeam/static/css/svgtogcode.css
@@ -141,6 +141,9 @@ svg text {
 
 #webcam_image {
 	position:absolute;
-	background-repeat: no-repeat;
-	
+	background-repeat: no-repeat;	
+}
+
+#webcam_image.broken {
+	visibility: hidden;
 }
